# wvwbot-rs

./: Cargo.toml
bot/: Cargo.toml
bot/src/: init.rs
bot/src/userupdate/: worker.rs
libs/discord-logger/: Cargo.toml
libs/discord-logger/src/: lib.rs
libs/discord_logger/: Cargo.toml
libs/discord_logger/src/: lib.rs
programs/bot/: Cargo.toml
programs/bot/src/: init.rs  main.rs
src/userupdate/: worker.rs
