[package]
name = "wvwbot-rs"
version = "0.1.0"
authors = ["Greaka <mrgreaka@gmail.com>"]
edition = "2018"

[dependencies]
ratelimit = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
discord_logger = { version = "0.1", path = "../../libs/discord_logger" }
log = { version = "0.4", features = ["std", "serde"] }
